<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.tc.demo</groupId>
    <artifactId>Roman_Novozhilov</artifactId>
    <version>2021.07.29-SNAPSHOT</version>

    <properties>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <testng.configs.path>${project.build.testOutputDirectory}/testng</testng.configs.path>
        <testng.suite.file>${testng.configs.path}/lesson1.empty.suite.xml</testng.suite.file>
        <checkstyle.version>8.42</checkstyle.version>
        <lombok.version>1.18.20</lombok.version>
        <logback-classic.version>1.2.5</logback-classic.version>
        <testng.version>7.4.0</testng.version>
        <assertj-core.version>3.20.2</assertj-core.version>
        <webdrivermanager.version>4.4.3</webdrivermanager.version>
        <selenium-java.version>3.141.59</selenium-java.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
        <selenium-api.version>3.141.5</selenium-api.version>
        <selenium-support.version>3.141.5</selenium-support.version>
        <allure-maven.version>2.10.0</allure-maven.version>
        <allure-testng.version>2.13.2</allure-testng.version>
        <aspectjweaver.version>1.9.7</aspectjweaver.version>
        <allure-maven.reportVersion>2.13.2</allure-maven.reportVersion>
        <!--<maven-install-plugin.version>2.5.2</maven-install-plugin.version>-->
        <cucumber-testng.version>6.11.0</cucumber-testng.version>
        <cucumber-java.version>6.11.0</cucumber-java.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>
                      https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
                    </configLocation>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>${maven-install-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                        <configuration>
                            <groupId>com.calculator</groupId>
                            <artifactId>calculator-app</artifactId>
                            <version>1.0</version>
                            <packaging>jar</packaging>
                            <file>${basedir}/lib/calculator-1.0.jar</file>
                        </configuration>
                    </execution>
                </executions>
            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver.version}/aspectjweaver-${aspectjweaver.version}.jar"
                    </argLine>
                    <suiteXmlFiles>
                        <suiteXmlFile>${testng.configs.path}/SeleniumHW6.xml</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectjweaver.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>Multiplication_And_Division</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/firstTest.MultiplicationAndDivision.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>Subtraction_And_Addition</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/defaultSecond.SubtractionAndAddition.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>All_Test</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/AllTest.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>HW2</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/TestEx1Ex2.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>HW3</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/HW3Ex1Ex2Test.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>HW4</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/HW4Ex1Ex2Test.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>HW5</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/HW5Cucumber.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>HW6</id>
            <activation><activeByDefault>false</activeByDefault></activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/SeleniumHW6.xml</testng.suite.file>
            </properties>
        </profile>
    </profiles>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.141.59</version>
            <scope>test</scope>
        </dependency>

        <dependency>
             <groupId>calculator</groupId>
             <artifactId>calculatorapp</artifactId>
             <scope>system</scope>
             <version>1.0</version>
             <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
             <version>3.141.5</version>
             <scope>compile</scope>
         </dependency>
             <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-support</artifactId>
             <version>3.141.5</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
             <version>${allure-testng.version}</version>
         </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>6.11.0</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>6.11.0</version>
        </dependency>



        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>4.4.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-chrome-driver</artifactId>
            <version>3.141.59</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>3.141.59</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>


     <reporting>
         <excludeDefaults>false</excludeDefaults>
         <plugins>
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
                 <version>${allure-maven.version}</version>
                 <configuration>
                     <reportVersion>${allure-maven.reportVersion}</reportVersion>
                 </configuration>
             </plugin>
         </plugins>
     </reporting>

 </project>